Improved TokenParser: support for all delimiters / string literals